0.9.31
- Hide poster/plot on osd now shows title and infoline

0.9.30
Stop prompt for installing plugins for info/search lists if disabled/not-installed
 - Change info lists from visibility conditions to include conditions
 - Change search lists from visibility conditions to include conditions
Fix info jumping down on single widget in multiwidget layout
Fix for season view 2

0.9.29
Experimental custom search function
Add clearlogo option to furniture
Fix for season posters
Fix trailer button visibility

0.9.28
Add Tri-Panel view
Add genres and languages furniture option
Fix login screen for light theme
Fix SettingsProfile cut-off text
Fix Autoscroll on single widgets
Simplify some skin settings
Add settings to disable video info dialog lists

0.9.27
Add Settings Widget
Add prefer poster for blur setting

0.9.26
Merge marduk's musicvideo search code
Update videoinfo to use musicinfo for musicvideos
Hide season view episodes if container is updating

0.9.25
Increase total widget limit to 50
Add title to lovefilm

0.9.24
Add landscape art and only fallback to clearlogo

0.9.23
Add hint arrows to extendedinfo dialogs
Add option to change autoscroll and timerperimage
Bump up size of topbar icons slightly (60px -> 70px)
Option for square artist image on music osd

0.9.22
Add hint arrows to info dialogs
Add icon mode to simple home
Add top250 skinhelper to tvshows/movies
Fix for list view years slide
Add new artwork osd

0.9.21
Add sdtv and hd-dvd flags
Add caps fonts for Greek all-caps fix
Support for listitem helper in showcase view (others coming soon)
Add filepath in filebrowser
Add ratings selector

0.9.20
Fix animation bounce
Add icons for multiwidget layouts

0.9.19
Clean-up in-built game support

0.9.18
Fix clearlogo on home issues
Add tracknaming template option in skinsettings > library
Add use standard labels instead of titles in skinsettings > library