@@ -27,6 +27,16 @@
     <onunload>ClearProperty(ListItemHelper.WidgetContainerId,Home)</onunload>
 
     <controls>
+        <control type="button" id="6000">
+            <description>Weather Jump</description>
+            <include>Defs_Hidden_Button</include>
+            <onup>301</onup>
+            <ondown>301</ondown>
+            <onleft>301</onleft>
+            <onright>301</onright>
+            <onback>301</onback>
+            <onclick>ActivateWindow(Weather)</onclick>
+        </control>
         <control type="list" id="9989">
             <description>hidden container for widget count</description>
             <posx>-20</posx>
