@@ -1,5 +1,6 @@
 0.9.31
 - Hide poster/plot on osd now shows title and infoline
+- Weather widget can focus
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
